--- a/public/global.css
+++ b/public/global.css
@@ -5,7 +5,8 @@ html, body {
 }
 
 body {
-	color: #333;
+	color: $bg-color-day;
+	background-color: $color-day;
 	margin: 0;
 	padding: 8px;
 	box-sizing: border-box;
